tests/expectations/passes/ssa_const_propagation/library_module_interface_array_key.out
Error [ETYC0372186]: Interface definitions are not allowed inside library modules.
    --> token_types.leo:2:1
     |
   2 | interface TokenStorage {
     | ^^^^^^^^^^^^^^^^^^^^^^^^
   3 |     mapping allowances: [address; 2] => u128;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   4 | }
     | ^
